[gd_scene load_steps=3 format=3 uid="uid://c7gsj0bf61dut"]

[ext_resource type="Script" uid="uid://d2gvue74cp75x" path="res://skill_node.gd" id="2_jctih"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_f6dya"]

[node name="SkillButton" type="TextureButton"]
offset_right = 40.0
offset_bottom = 40.0
toggle_mode = true
texture_normal = SubResource("CompressedTexture2D_f6dya")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_jctih")
skill_name = "test"
skill_description = "testesen"
skill_levels = 5

[node name="ToolTipPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 40.0
offset_right = 80.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="ToolTipPanel"]
visible = false
layout_mode = 2

[node name="SkillNameLabel" type="Label" parent="ToolTipPanel/VBoxContainer"]
visible = false
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10

[node name="SkillDescriptionLabel" type="Label" parent="ToolTipPanel/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 6

[node name="Panel" type="Panel" parent="."]
show_behind_parent = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
vertical_alignment = 2

[node name="Line2D" type="Line2D" parent="."]
top_level = true
z_index = 2
width = 2.0

[connection signal="pressed" from="." to="." method="_on_pressed"]
